src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AP_s_Email__c</fullName>
        <description>Account Payable&apos;s Email address for Master Corporate Account.</description>
        <label>AP&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AP_s_Fax__c</fullName>
        <label>AP&apos;s Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AP_s_Phone__c</fullName>
        <label>AP&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVABrandCommunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify if a community is an AVA brand</description>
        <label>AVA Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVABrandResident__c</fullName>
        <formula>if(Parent.AVABrandCommunity__c, &quot;AVA&quot; ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVA Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_Partial_Payment_2__c</fullName>
        <description>Payment Acceptance Guidelines (Admin Case # 00016972)</description>
        <label>Accept Partial Payment?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accept_Partial_Payment_3__c</fullName>
        <description>Payment Acceptance Guidelines (Admin Case # 00016972)</description>
        <label>Accept Partial Payment?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accept_Partial_Payment__c</fullName>
        <description>Payment Acceptance Guidelines (Admin Case #00016972)</description>
        <label>Accept Partial Payment?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accept_Western_Union__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Western Union</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Files_Previous_ID__c</fullName>
        <formula>HYPERLINK(&quot;file://&quot; &amp; &quot;api_nt5/data/ccc/resident_communication/&quot; &amp; Community_Name__c &amp; &quot;/AVB&quot; &amp; PrevNameID__c, &quot;View Directory&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Files (Previous ID)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Files__c</fullName>
        <description>Derives the link to AVB Share Drive + Community Name + AVB Account ID

OLD with Subtitute
HYPERLINK(&quot;file://&quot; &amp; &quot;api_nt5/data/ccc/resident_communication/&quot; &amp;   SUBSTITUTE(Community_Name__c, &quot; &quot;,&quot;&quot;) &amp;  &quot;/&quot; &amp; Account_ID__c, &quot;View Directory&quot;)</description>
        <formula>HYPERLINK(&quot;file://&quot; &amp; &quot;api_nt5/data/ccc/resident_communication/&quot; &amp; Community_Name__c &amp;  &quot;/&quot; &amp; Account_ID__c, &quot;View Directory&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click this link to view files stored on the share drive  for this Customer Group.</inlineHelpText>
        <label>Account Files</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>External ID related to Foundation</description>
        <externalId>true</externalId>
        <label>AVB Account ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <label>Account Region</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Payable_Contact__c</fullName>
        <description>Accounts Payable Contact for Master Corporate Account</description>
        <label>Accounts Payable Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquistion_Date__c</fullName>
        <label>Acquistion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquistion_Notes__c</fullName>
        <description>Case Number 00013156</description>
        <label>Acquistion Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Actively_in_Litigation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the the customer is currently in litigation</description>
        <label>Actively in Litigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdvURL__c</fullName>
        <label>Adv URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Affordable_Housing_Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affordable Housing Waitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affordable_Housing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affordable Housing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AlertedSessionID__c</fullName>
        <label>Alerted SessionID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Due_Next_FOM__c</fullName>
        <label>Amount Due Next FOM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplyEmail__c</fullName>
        <label>Apply Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ApplyPhone__c</fullName>
        <label>Apply Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ApplyURL__c</fullName>
        <label>Apply URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Associate_Housing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CSO Associate Housing Group logic.  This lookup field will be related to the record that will have a parent account called &quot;Associate Housing Community&quot; which only users in the CSO Associate Housing Group will have access too.</description>
        <label>Associate Housing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Associate Housing Account)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associate_Housing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associate Housing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Caller__c</fullName>
        <label>Authorized Caller</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avalon_Bay__c</fullName>
        <label>AvalonBay Associate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_E_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block e-Payment\Lockbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlockePaymentLockboxLabel__c</fullName>
        <formula>if( Block_E_Payment__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Block e-Payment\Lockbox</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Skies_Flag__c</fullName>
        <formula>IF(ISPICKVAL(Parent.Supported_by_Blue_Skies_Advantage__c,&quot;Yes&quot;) , 
IMAGE(&quot;https://na4.salesforce.com/servlet/servlet.FileDownload?file=01560000000MP20&quot;, &quot;Blue Skies&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blue Skies Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCC_Transition_Date__c</fullName>
        <description>Date the communities were transitioned to the CCC.</description>
        <label>CCC Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CerfifiedFundsForWayne__c</fullName>
        <defaultValue>&quot;Must Requ8ire Certified Funds for all Payments&quot;</defaultValue>
        <label>Cerfified Funds for Wayne</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertifiedFundsOnlyLabel__c</fullName>
        <formula>if(or(CertifiedFundsOnlySwitch__c,  Block_E_Payment__c),  IMAGE(&quot;/servlet/servlet.FileDownload?file=015P00000000uuP&quot;, &quot;Must Require Certified Funds for all Payments&quot;, 12, 250) , &quot;No Restriction&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certified Funds</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertifiedFundsOnlySwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Funds Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checks__c</fullName>
        <formula>IF(No_Payments_Accepted__c, &quot;Must Require Certified Funds for all Payments&quot;,&quot;No Restriction&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Applies to MRI Customer Groups only</inlineHelpText>
        <label>Certified Funds Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollectionsVendorPhoneNumber__c</fullName>
        <label>Collections Vendor Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CollectionsVendor__c</fullName>
        <label>Collections Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityBrand__c</fullName>
        <description>Community level segment brand</description>
        <label>Community Brand</label>
        <picklist>
            <picklistValues>
                <fullName>AVB</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAVES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommunityEmail__c</fullName>
        <label>Community Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CommunityPhone__c</fullName>
        <label>Community Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Community_ID__c</fullName>
        <label>Community ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Manager__c</fullName>
        <description>This field is text - loaded from Foundation for now.  Will move to linked contact roles in the future.</description>
        <label>Community Manager</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Name__c</fullName>
        <description>This field is denormalized to be available on the Customer Group Page to enable a formula to dynamically build a document store directory.  This field should be eliminated as soon as SFDC allows cross-references in formulas - e.g. Parent ID.Name. and can be used to form the directory path.</description>
        <label>Community Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Type__c</fullName>
        <label>Community Type</label>
        <picklist>
            <picklistValues>
                <fullName>Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMBO - Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMBO-MU - Combo-Mixed Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GARD - Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GARD-MU Garden-Mixed Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIGH - High Rise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIGH-MU - Hight-rise-Mixed-Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDR - Mide-Rise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDR-MU - Mid-Rise-Mixed Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NR BLDG - Non-Residential Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOWN - Townhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOWN-MU - Townhourse-Mixed Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confidential_Note_Log__c</fullName>
        <description>Created for CSO Associate Housing group logic.  This field will be a log of anything that is entered into the Confidential Note field.  This field ties into the Confidential Note workflow.</description>
        <label>Confidential Note Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidential_Note__c</fullName>
        <description>Created for CSO Associate Housing logic.  Any data entered into this field will be appended to the Confidential Note log field through the Confidential Note workflow rule.</description>
        <label>Confidential Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CoreURL__c</fullName>
        <label>Core URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Corporate_Apartment_Billing_Address__c</fullName>
        <inlineHelpText>Address that corporate appartments are to mail their payments to.</inlineHelpText>
        <label>Corporate Apartment Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Court_Date__c</fullName>
        <inlineHelpText>Community&apos;s Court Date for Litigation Activities - This field will be updated on a monthly basis.</inlineHelpText>
        <label>Court Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Create_In_MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create In MRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_From_ILS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Customer Group was created from an Independent Lead Source website, the box will be checked.</description>
        <label>Created From ILS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentCity__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentCountry__c</fullName>
        <defaultValue>&quot;United States&quot;</defaultValue>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentState__c</fullName>
        <label>State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentStreetAddress1__c</fullName>
        <label>Street Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentStreetAddress2__c</fullName>
        <label>Street Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentZip__c</fullName>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomAlert__c</fullName>
        <label>Custom Alert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerGroupBrandFlag__c</fullName>
        <formula>if(ispickval(Parent.CommunityBrand__c, &quot;AVA&quot;), image(&quot;https://c.cs4.content.force.com/servlet/servlet.FileDownload?file=015P00000000tli&quot;, &quot;AVA&quot;, 20, 45), 
  if(ispickval(Parent.CommunityBrand__c, &quot;AVB&quot;), image(&quot;https://c.cs4.content.force.com/servlet/servlet.FileDownload?file=015P00000000tln&quot;, &quot;AVB&quot;, 20, 45), 
    if(ispickval(Parent.CommunityBrand__c, &quot;EAVES&quot;), image(&quot;https://c.cs4.content.force.com/servlet/servlet.FileDownload?file=015P00000000tls&quot;, &quot;eaves&quot;,  20, 45), &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerGroupBrandLabel__c</fullName>
        <formula>text(Parent.CommunityBrand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomerGroupBrandLabel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerGroupBrand__c</fullName>
        <formula>text(Parent.CommunityBrand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Group Community Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Customer (AVB Associate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Customer (Vendor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Guarantor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Collections_Updated__c</fullName>
        <label>Date Collections Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_To_Collections__c</fullName>
        <label>Date Sent To Collections</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exists_in_MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exists in MRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Move_in_Date__c</fullName>
        <label>Expected Move in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Foundation_RFH__c</fullName>
        <formula>If (LEN( PrevNameID__c ) &lt; 1, 
HYPERLINK(&quot;file://&quot; &amp; &quot;api_nt5/data/ccc/Foundation_RFHs/&quot; &amp; Community_Name__c &amp; &quot;/&quot; &amp;  Account_ID__c &amp; &quot;.pdf&quot;, &quot;View File&quot;),
HYPERLINK(&quot;file://&quot; &amp; &quot;api_nt5/data/ccc/Foundation_RFHs/&quot; &amp; Community_Name__c &amp;  &quot;/AVB&quot; &amp; PrevNameID__c &amp; &quot;.pdf&quot;, &quot;View File&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Foundation RFH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarding_Address_City__c</fullName>
        <description>Populated from MRI</description>
        <label>Fwd Address - City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarding_Address_Country__c</fullName>
        <label>Fwd Address - Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarding_Address_Line_1__c</fullName>
        <description>Populated from MRI</description>
        <label>Fwd Address - Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarding_Address_Line_2__c</fullName>
        <description>Populated from MRI</description>
        <label>Fwd Address - Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarding_Address_State__c</fullName>
        <description>Populated from MRI</description>
        <label>Fwd Address - State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarding_Address_Zip__c</fullName>
        <description>Populated from MRI</description>
        <label>Fwd Address - Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLiveOnLM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Live on Lead Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_LRO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is LRO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MRI?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Corporate_Alt_Billing_Address__c</fullName>
        <label>Large Corp - Alt Billing Address</label>
        <picklist>
            <picklistValues>
                <fullName>34 Breezy Hill Drive, Stafford, VA 22554</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2900 Eisenhower Avenue, Alexandria, VA 22314</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Late_Count__c</fullName>
        <label>Late Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_Fee_Grace_Period_Days_Formula__c</fullName>
        <formula>IF(Contains(Community_ID__c, &quot;CA&quot;), &quot;3&quot;,
IF(Contains(Community_ID__c, &quot;CT&quot;), &quot;10&quot;, 
IF(Contains(Community_ID__c, &quot;DC&quot;), &quot;3&quot;,
IF(Contains(Community_ID__c, &quot;IL&quot;), &quot;5&quot;, 
IF(Contains(Community_ID__c, &quot;MA&quot;), &quot;30&quot;, 
IF(Contains(Community_ID__c, &quot;NJ&quot;), &quot;5&quot;, 
IF(Contains(Community_ID__c, &quot;NY&quot;), &quot;5&quot;, 
IF(Contains(Community_ID__c, &quot;RI&quot;), &quot;15&quot;, 
IF(Contains(Community_ID__c, &quot;VA&quot;), &quot;5&quot;, 
IF(Contains(Community_ID__c, &quot;WA&quot;), &quot;3&quot;, 
IF(Contains(Community_ID__c, &quot;MD001&quot;), &quot;5&quot;,
IF(Contains(Community_ID__c, &quot;MD002&quot;), &quot;5&quot;,
IF(Contains(Community_ID__c, &quot;MD009&quot;), &quot;5&quot;,
IF(Contains(Community_ID__c, &quot;MD012&quot;), &quot;5&quot;,
IF(Contains(Community_ID__c, &quot;MD019&quot;), &quot;5&quot;,
IF(Contains(Community_ID__c, &quot;MD022&quot;), &quot;5&quot;,
IF(Contains(Community_ID__c, &quot;MDA&quot;), &quot;5&quot;,
IF(Contains(Community_ID__c, &quot;MD003&quot;), &quot;10&quot;,
IF(Contains(Community_ID__c, &quot;MD006&quot;), &quot;10&quot;,
IF(Contains(Community_ID__c, &quot;MD007&quot;), &quot;10&quot;,
IF(Contains(Community_ID__c, &quot;MD008&quot;), &quot;10&quot;,
IF(Contains(Community_ID__c, &quot;MD014&quot;), &quot;10&quot;,
IF(Contains(Community_ID__c, &quot;MD015&quot;), &quot;10&quot;,
IF(Contains(Community_ID__c, &quot;MD016&quot;), &quot;10&quot;,
IF(Contains(Community_ID__c, &quot;MD021&quot;), &quot;10&quot;,
null)))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late Fee Grace Period Days (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Fee_Grace_Period_Days__c</fullName>
        <description>Number of Late Fee Grace Period Days - Imported from Foundation Policies</description>
        <label>Late Fee Grace Period Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_Fee_Threshold__c</fullName>
        <label>Late Fee Threshold (Manually Updated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <label>Law Firm</label>
        <picklist>
            <picklistValues>
                <fullName>Barbara Harris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binder and Malter, LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collier Halpern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Griffin, Griffin, &amp; Alexander P.C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gross and Romanick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holland &amp; Knight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keen &amp; Matney, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimball,Tirey, &amp; St. John</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Office of Puckett and Redford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices of David K. Barhydt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices of Donna Ashton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices of Michael N. McCarthy, P.C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lehrman, Kronick &amp; Lehrman, LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mallios, Rider, &amp; Goley, LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marcus Errico Emmer &amp; Brooks, P.C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pahl &amp; McCay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rosenberg &amp; Estis, P.C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teller and Levit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todd B. Rothbard, Attorney at Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wasserman-Stern Law Offices</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Term__c</fullName>
        <label>Lease Term</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leasing_Contact__c</fullName>
        <description>Leasing Contact for Master Corporate Account</description>
        <label>Leasing Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Email__c</fullName>
        <description>Leasing Contact&apos;s Email address for Master Corporate Accounts</description>
        <label>Leasing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Legal_Alert__c</fullName>
        <formula>IF(  Open_Legal_Alerts__c &gt;0, &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OK to send to Legal?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_lead_origin__c</fullName>
        <label>Level 1 lead origin</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Activities__c</fullName>
        <label>Total Litigation Activities</label>
        <summaryForeignKey>Litigation__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Litigation_Flag_FND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Litigation Flag (Foundation)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRI_Indicator__c</fullName>
        <formula>IF(
OR(
ParentId =&quot;0016000000IuQwI&quot;, 
ParentId =&quot;0016000000IuQwH&quot;,
ParentId =&quot;0016000000IJDn0&quot;, 
CONTAINS(Community_ID__c, &quot;MRI&quot;),
Is_MRI__c =True,
Parent.Is_MRI__c=True),
(IMAGE(&quot;https://na4.salesforce.com/servlet/servlet.FileDownload?file=01560000000MG9E&quot;, &quot;Converted&quot;)), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRI Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRI_Leasing_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MRI Leasing Associate</label>
        <referenceTo>MRILeasingAssociate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MRI_Transition_Date__c</fullName>
        <label>MRI Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MapURL__c</fullName>
        <label>Map URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <label>Marketing Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Balance__c</fullName>
        <description>Data to be imported from MRI via nightly batch loads</description>
        <label>Minimum Balance (MRI)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Legal_Fees__c</fullName>
        <label>Minimum Legal Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NSF_Count__c</fullName>
        <label>NSF Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>